# sena-mcp-server

./: .gitignore  DEPLOYMENT_PLAN.md  LICENSE  README.md  RESEARCH_ANALYSIS.md  install.sh  pyproject.toml
commands/: README.md  accessibility-checker.md  activate-sena.md  analyze-code.md  api-architect.md  api-docs.md  app-performance.md  app-security.md  architecture-validator.md  auth-analyzer.md  bundle-analyzer.md  cache-optimizer.md  cache-query.md  cdn-optimizer.md  changelog-generator.md  check-sena.md  code-ownership.md  component-generator.md  constitutional-check.md  cors-validator.md  cosmic-balance.md  css-architect.md  database-tuner.md  deactivate-sena.md  dead-code-eliminator.md  deep-link-validator.md  deep-think.md  dependency-audit.md  dependency-graph.md  design-system.md  device-testing.md  docs-generator.md  e2e-runner.md  explain-innovation.md  first-principles.md  folder-architect.md  genius-mode.md  graphql-optimizer.md  import-analyzer.md  intuitive.md  (+83 more)
config/: .env.example  CLAUDE.md.template  README.md  com.sena.daemon.plist  sena_skills.json.example  settings.json.example
controller/: README.md  __init__.py  auto_integration.py  claude_sena_integration.py  final_deep_verification.py  pythonstartup.py  sena_auto_format.py  sena_clean_output_100.py  sena_controller_100.py  sena_daemon.py  sena_direct_output.py  sena_format_utils.py  sena_mcp_server.py  sena_metrics.py  sena_metrics_mcp.py  sena_progress_auto_100.py  sena_silent_executor.py  sena_transparent_layer.py  session_manager.py  test_auto_rules.py  test_clean_output.py  verify_rules_5_6_100.py
docs/: ARCHITECTURE.md  CLAUDE_CLI_RULES.md  DAEMON.md  FEATURE_COMPATIBILITY.md  OPTIMIZATION_SUMMARY.md  TRANSPARENT_ARCHITECTURE.md
hooks/: README.md  auto-progress.sh  conversation-progress.sh  permission-request.sh  post-tool-use.sh  pre-bash-execution.sh  pre-python-execution.sh  python-executor.sh  (+6 more)
(+34 files in other folders)
