[project]
name = "sena-mcp-server"
version = "3.5.2"
description = "SENA Controller v3.5.2 - Security Hardening: MCP tools + 2,543 lines knowledge + Autonomous skills + Transparent hooks + Command injection protection + Input validation + 20 Python modules + 122 commands"
authors = [
    {name = "SENA Team", email = "sena@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "claude", "ai", "sena", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Sena1996/sena-mcp-server"
Documentation = "https://github.com/Sena1996/sena-mcp-server#readme"
Repository = "https://github.com/Sena1996/sena-mcp-server"
Issues = "https://github.com/Sena1996/sena-mcp-server/issues"

[project.scripts]
sena-mcp-server = "sena_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sena_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
